# dustapprox

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.rst  TODO.md  atmospheres-1.py  atmospheres.html  contributing.html  dustapprox-1.py  dustapprox-2.py  dustapprox-3.py  dustapprox-io-1.py  dustapprox-literature-1.py  dustapprox-models-1.py  dustapprox.html  dustapprox.io.html  dustapprox.literature.html  dustapprox.models.html  dustapprox.tools.html  examples.html  extinction-1.py  extinction.html  genindex.html  index-1.py  index-2.py  index-3.py  index.html  modules.html  objects.inv  photometry.html  precomputed.html  precomputed_content.html  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  (+3 more)
.github/workflows/: documentation.yml  python-publish.yml  unittests.yml
_downloads/166adada741cbc425c9164e2bb58c9d3/: extinction-1.py
_downloads/184ed111caf5e18fd5b13953511d7813/: dustapprox-3.py
_downloads/246c69c5e135e3824a5bc40d278fda34/: photometry-1.py
_downloads/25f419794f3589105a3cedf01038cfc8/: index-1.py
_downloads/3152ea1c2b846851a4ae4d1a2c0f9c9a/: index-3.py
_downloads/44f6ab18d1207e45466191f8364c0d27/: dustapprox-2.py
_downloads/65f8898a59d6181d3f3d7b897f9f0365/: dustapprox-models-1.py
_downloads/6edd9384cc4835e1ac3719c752d86a61/: dustapprox-1.py
_downloads/7058aec332d785a4591743caa46fe3a2/: index-2.py
_downloads/8b6ec5eb44fa8489a6b4f0307a55d6ea/: dustapprox-literature-1.py
_downloads/ad67eb8525d6369b52bab51e5df58b91/: dustapprox-4.py
_downloads/e4a04ace0109ecd2076fe69241cc1b95/: atmospheres-1.py
_modules/: index.html
_modules/astropy/units/: core.html  quantity.html
_modules/dust_extinction/: baseclasses.html
_modules/dustapprox/: astropy_units.html  extinction.html  legacy_extinction.html  models.html
_modules/dustapprox/io/: ecsv.html  svo.html
_modules/dustapprox/literature/: c1.html  edr3.html
_modules/dustapprox/models/: basemodel.html  polynomial.html
_modules/dustapprox/tools/: downloader.html  generate_model.html  grid.html  model_characteristics.html  parallel.html
_sources/: atmospheres.rst  contributing.rst  dustapprox.io.rst  dustapprox.literature.rst  dustapprox.models.rst  dustapprox.rst  dustapprox.tools.rst  examples.ipynb  extinction.rst  index.rst  modules.rst  photometry.rst  precomputed_content.rst
_sources/source/: dustapprox.io.rst  dustapprox.literature.rst  dustapprox.models.rst  dustapprox.rst  dustapprox.tools.rst
_static/: activate_datatables.js  documentation_options.js
docs/: Makefile  atmospheres.rst  conf.py  contributing.rst  examples.ipynb  extinction.rst  gdr3_dustapprox.io.rst  gdr3_dustapprox.models.rst  gdr3_dustapprox.rst  generate_precomputed_list.py  index.rst  modules.rst  precomputed.rst  precomputed_content.rst  requirements.txt  whats_new.rst
docs/models/: README
docs/precomputed/grids/: kurucz_gaia_f99_a0r0_grid.ecsv
dustapprox/: __init__.py  c1.py  c1m.py  edr3.py  extinction.py
dustapprox/data/Gaia2/: C1B431.csv  C1B768.csv  C1M326.csv  C1M379.csv  C1M515.csv  C1M656.csv  C1M861.csv
dustapprox/data/precomputed/polynomial/: kurucz_f99_a0_teff.ecsv
dustapprox/data/precomputed/polynomial/f99/kurucz/: 2mass_kurucz_f99_a0_teff.ecsv  gaia_kurucz_f99_a0_teff.ecsv  gaiac1_kurucz_f99_a0_teff.ecsv  galex_kurucz_f99_a0_teff.ecsv  generic_kurucz_f99_a0_teff.ecsv  sloan_kurucz_f99_a0_teff.ecsv  wise_kurucz_f99_a0_teff.ecsv
dustapprox/io/: ecsv.py
dustapprox/literature/: edr3.py
dustapprox/models/: __init__.py  basemodel.py  polynomial.py
dustapprox/tools/: __init__.py  downloader.py  grid.py
examples/: Examples.ipynb  Snakefile  generate_polynomial_models_script.py
gdr3_dustapprox/: c1m.py  edr3.py  extinction.py  version.py
gdr3_dustapprox/data/Fitz19_EDR3_extinctionlawcoefficients/: Fitz19_EDR3_HRDTop.csv
gdr3_dustapprox/io/: ecsv.py  svo.py
gdr3_dustapprox/models/: polynomial.py
source/: dustapprox.html  dustapprox.io.html  dustapprox.literature.html  dustapprox.models.html  dustapprox.tools.html  modules.html
src/dustapprox/: __init__.py  astropy_units.py  extinction.py  extinction1.py  legacy_extinction.py
src/dustapprox/data/Fitz19_EDR3_extinctionlawcoefficients/: Fitz19_EDR3_MainSequence.csv  README.md
src/dustapprox/data/Gaia2/: C1B556.csv  C1B655.csv  C1B916.csv  C1M344.csv  C1M395.csv  C1M410.csv  C1M467.csv  C1M506.csv  C1M549.csv  C1M716.csv  C1M747.csv  C1M825.csv  C1M965.csv  README.md
src/dustapprox/data/precomputed/: README.rst
src/dustapprox/data/precomputed/grids/: README.rst
src/dustapprox/data/precomputed/polynomial/G23/kurucz/: oct2025_a0r0_gaia_dr3_kurucz_G23_teff_A0_R0.ecsv  oct2025_a0r0_gaiac1_kurucz_G23_teff_A0_R0.ecsv  oct2025_a0r0_gaiadr4_kurucz_G23_teff_A0_R0.ecsv  oct2025_a0r0_galex_kurucz_G23_teff_A0_R0.ecsv  oct2025_a0r0_generic_kurucz_G23_teff_A0_R0.ecsv  oct2025_a0r0_sloan_kurucz_G23_teff_A0_R0.ecsv  oct2025_a0r0_twomass_kurucz_G23_teff_A0_R0.ecsv  oct2025_a0r0_wise_kurucz_G23_teff_A0_R0.ecsv
src/dustapprox/data/precomputed/polynomial/f99/kurucz/: 2mass_kurucz_f99_a0_teff.ecsv  gaia_kurucz_f99_a0_teff.ecsv  gaiac1_kurucz_f99_a0_teff.ecsv  galex_kurucz_f99_a0_teff.ecsv  oct2025_a0r0_gaia_dr3_kurucz_F99_teff_A0_R0.ecsv  oct2025_a0r0_gaiac1_kurucz_F99_teff_A0_R0.ecsv  oct2025_a0r0_gaiadr4_kurucz_F99_teff_A0_R0.ecsv  oct2025_a0r0_galex_kurucz_F99_teff_A0_R0.ecsv  oct2025_a0r0_generic_kurucz_F99_teff_A0_R0.ecsv  (+5 more)
src/dustapprox/io/: __init__.py  ecsv.py  svo.py
src/dustapprox/literature/: __init__.py  c1.py  edr3.py
src/dustapprox/models/: __init__.py  basemodel.py  polynomial.py
src/dustapprox/tools/: __init__.py  downloader.py  generate_model.py  grid.py  model_characteristics.py  parallel.py
tests/: __init__.py  conftest.py  test_astropy_units.py  test_downloader.py  test_extinction.py  test_grid_extended.py  test_io_ecsv.py  test_io_svo.py  test_legacy_extinction.py  test_literature.py  test_models.py  test_package.py  test_polynomial_extended.py  test_tools_grid.py
unittests/: test_quick.py
workflows/: documentation.yml
